Change postprocess action version

--- a/full/action.yml
+++ b/full/action.yml
@@ -22,7 +22,7 @@ runs:
   using: composite
   steps:
     - name: Run OGC BBR postprocess
-      uses: avillar/bblocks-postprocess/postprocess@master
+      uses: avillar/bblocks-postprocess/postprocess@v1
       with:
         register_file: ${{ inputs.register_file }}
         items_dir: ${{ inputs.items_dir }}
