--- a/full/action.yml
+++ b/full/action.yml
@@ -20,6 +20,9 @@ inputs:
   annotated_path:
     description: Output path for annotated schemas
     default: 'annotated'
+  clean:
+    description: Whether to delete all output files and directories before generating new ones
+    default: 'true'
 
 runs:
   using: composite
@@ -33,6 +36,7 @@ runs:
         base_url: ${{ inputs.base_url }}
         fail_on_error: ${{ inputs.fail_on_error }}
         annotated_path: ${{ inputs.annotated_path }}
+        clean: ${{ inputs.clean }}
     - name: Generate Slate documentation
       run: |
         GENDOCS_PATH="$(realpath "${{ inputs.generated_docs_path }}")"
