--- a/postprocess/action.yml
+++ b/postprocess/action.yml
@@ -4,13 +4,13 @@ author: Alejandro Villar
 inputs:
   register_file:
     description: JSON register file for output
-    default: register.json
+    default: build/register.json
   items_dir:
     description: Root directory where building blocks (subdirectories with bblock.json) are located
-    default: registereditems
+    default: build/registereditems
   generated_docs_path:
     description: Output directory for documentation
-    default: generateddocs
+    default: build/generateddocs
   base_url:
     description: Base URL to use for asset linkage
     default: https://raw.githubusercontent.com/${{github.repository}}/${{github.ref_name}}
@@ -19,7 +19,7 @@ inputs:
     default: 'false'
   annotated_path:
     description: Output path for annotated schemas
-    default: 'annotated'
+    default: build/annotated
   clean:
     description: Whether to delete all output files and directories before generating new ones
     default: 'true'
