Use status from http://www.opengis.net/def/status

--- a/ogc/bblocks/register-context.yaml
+++ b/ogc/bblocks/register-context.yaml
@@ -24,7 +24,7 @@ context:
       '@id': bblocks:status
       '@type': '@id'
       '@context':
-        '@base': http://example.com/ogc/def/bblocks/status/
+        '@base': http://www.opengis.net/def/status/
     dateTimeAddition:
       '@id': dct:created
       '@type': xsd:dateTime
