--- a/postprocess/action.yml
+++ b/postprocess/action.yml
@@ -29,6 +29,9 @@ inputs:
   test_outputs_path:
     description: Directory for test output resources
     default: build/tests
+  github_base_url:
+    description: Base URL for linking to GitHub content
+    default: https://github.com/${{github.repository}}/blob/${{github.ref_name}}/
 
 runs:
   using: docker
@@ -52,3 +55,5 @@ runs:
     - ${{ inputs.config_file }}
     - '--test-outputs'
     - ${{ inputs.test_outputs_path }}
+    - '--github-base-url'
+    - ${{ inputs.github_base_url }}
