Use custom Slate. Add ttl tab alias

--- a/full/action.yml
+++ b/full/action.yml
@@ -56,5 +56,5 @@ runs:
         SOURCE_PATH="${GENDOCS_PATH}/slate/"
         BUILD_PATH="${GENDOCS_PATH}/slate-build/"
         docker run --rm -v "${SOURCE_PATH}:/srv/slate/source" \
-          -v "${BUILD_PATH}:/srv/slate/build" slatedocs/slate:v2.13.1 build
+          -v "${BUILD_PATH}:/srv/slate/build" dockerogc/slate build
       shell: bash
