--- a/ogc/bblocks/register-context.yaml
+++ b/ogc/bblocks/register-context.yaml
@@ -4,7 +4,7 @@ transform:
   # Add ConceptScheme
   - |
     {
-      "@id": "https://opengis.net/def/bblocks",
+      "@id": "https://www.opengis.net/def/bblocks",
       "@type": "skos:ConceptScheme",
       "skos:prefLabel": "OGC Building Blocks Register",
       "hasConcepts": .
@@ -13,8 +13,8 @@ transform:
 # TODO: add dateTimeSupersession, dateTimeRetirement, dateTimeInvalidation, predecessor, successor
 context:
   '$':
-    bblocks: https://opengis.net/def/bblocks/
-    '@base': https://opengis.net/def/bblocks/
+    bblocks: https://www.opengis.net/def/bblocks/
+    '@base': https://www.opengis.net/def/bblocks/
     rdfs: http://www.w3.org/2000/01/rdf-schema#
     skos: http://www.w3.org/2004/02/skos/core#
     dct: http://purl.org/dc/terms/
@@ -26,7 +26,7 @@ context:
     #  '@id': bblocks:inRegister
     #  '@type': '@id'
     #  '@context':
-    #    '@base': http://opengis.net/def/bblocks/
+    #    '@base': http://www.opengis.net/def/bblocks/
     status:
       '@id': bblocks:status
       '@type': '@id'
@@ -43,12 +43,12 @@ context:
       '@id': bblocks:maturity
       '@type': '@id'
       '@context':
-        '@base': http://opengis.net/def/bblocks/maturity/
+        '@base': http://www.opengis.net/def/bblocks/maturity/
     scope:
       '@id': bblocks:scope
       '@type': '@id'
       '@context':
-        '@base': http://opengis.net/def/bblocks/scope/
+        '@base': http://www.opengis.net/def/bblocks/scope/
     sources:
       '@id': dct:source
       '@context':
