--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ jsonschema==4.17.3
 ogc-na>=0.3.2
 rdflib @ git+https://github.com/avillar/rdflib.git@6.x#egg=rdflib
 requests~=2.31.0
-
 pyparsing~=3.0.9
+pyshacl~=0.21.0
+rdflib~=6.3.2
