--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ asciidoc
 pyyaml~=6.0
 Mako~=1.2.4
 jsonschema==4.17.3
-ogc-na>=0.3.2
+ogc-na @ git+https://github.com/opengeospatial/ogc-na-tools@main#egg=ogc-na
 rdflib @ git+https://github.com/avillar/rdflib.git@6.x#egg=rdflib
 requests~=2.31.0
 pyparsing~=3.0.9
