Add predicate for dependsOn

--- a/ogc/bblocks/register-context.yaml
+++ b/ogc/bblocks/register-context.yaml
@@ -67,3 +67,6 @@ context:
         url: rdfs:isDefinedBy
     hasConcepts:
       '@reverse': skos:inScheme
+    dependsOn:
+      '@id': bblocks:dependsOn
+      '@type': '@id'
