--- a/postprocess/action.yml
+++ b/postprocess/action.yml
@@ -35,6 +35,12 @@ inputs:
   github_base_url:
     description: Base URL for linking to GitHub content
     default: https://github.com/${{github.repository}}/blob/${{github.ref_name}}/
+  deploy_viewer:
+    description: Whether to use the new building blocks viewer
+    default: 'true'
+  viewer_path:
+    description: Path where to deploy the viewer
+    default: '.'
 
 runs:
   using: docker
@@ -60,3 +66,7 @@ runs:
     - ${{ inputs.test_outputs_path }}
     - '--github-base-url'
     - ${{ inputs.github_base_url }}
+    - '--deploy-viewer'
+    - ${{ inputs.deploy_viewer }}
+    - '--viewer-path'
+    - ${{ inputs.viewer_path }}
