--- a/.github/workflows/validate-and-process.yml
+++ b/.github/workflows/validate-and-process.yml
@@ -61,6 +61,10 @@ on:
         type: boolean
         description: Whether to use the new building blocks viewer
         default: true
+      viewer-path:
+        type: string
+        description: Path where to deploy the viewer
+        default: '.'
 
 
 permissions:
@@ -102,6 +106,8 @@ jobs:
           config_file: ${{ inputs.config_file }}
           test_outputs_path: ${{ inputs.test_outputs_path }}
           github_base_url: ${{ inputs.github_base_url }}
+          deploy_viewer: "${{ inputs.deploy-viewer }}"
+          viewer_path: ${{ inputs.viewer-path }}
       - name: Compress large _visited_properties.tsv and git pull
         run: |
           sudo find "${{ inputs.annotated_path }}" -size +10M -name _visited_properties.tsv \
@@ -146,6 +152,10 @@ jobs:
       - name: Deploy Building Blocks viewer
         if: ${{ inputs.deploy-viewer && github.event.repository.has_pages && !inputs.skip-pages }}
         run: |
+          if [ -n "${{ inputs.viewer_path }}" ]; then
+            mkdir -p "${{ inputs.viewer_path }}"
+            cd "${{ inputs.viewer_path }}"
+          fi
           wget -q -O - https://github.com/ogcincubator/bblocks-viewer/archive/refs/heads/dist.tar.gz | tar zx --strip-components=1
           sed -i -r 's,/@BASE_URL@/,/${{ github.event.repository.name }}/,g' index.html 404.html assets/*.js assets/*.css
           cat << EOF > config.js
