--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - master
 
+concurrency:
+  group: docker
+  cancel-in-progress: true
+
 jobs:
   docker:
     runs-on: ubuntu-latest
