--- a/ogc/bblocks/register-context.yaml
+++ b/ogc/bblocks/register-context.yaml
@@ -1,29 +1,36 @@
 transform:
-  # Extract bblocks
-  - if type != "array" then .bblocks else . end
   # Add @type from itemClass with initial capital letter
-  - '[ .[] | ."@type" = [("bblocks:" + (.itemClass[:1]|ascii_upcase) + .itemClass[1:]), "skos:Concept"] ]'
+  - '.bblocks |= [ .[] | ."@type" = [("bblocks:" + (.itemClass[:1]|ascii_upcase) + .itemClass[1:]), "skos:Concept", "dcat:Dataset"] ]'
   # Add ConceptScheme
   - |
-    {
-      "@id": "https://www.opengis.net/def/bblocks",
-      "@type": "skos:ConceptScheme",
-      "skos:prefLabel": "OGC Building Blocks Register",
-      "hasConcepts": .
-    }
+    if type == "array" then {
+        "@id": "https://www.opengis.net/def/bblocks",
+        "@type": ["skos:ConceptScheme", "dcat:Catalog"],
+        "skos:prefLabel": "OGC Building Blocks Register",
+        "hasConcepts": .
+      } else . + {
+        "@type": ["skos:ConceptScheme", "dcat:Catalog"],
+        "skos:prefLabel": .name,
+        "hasConcepts": .bblocks
+      } | del(.bblocks) end
+  - '{ "@context": { "@base": ($baseUrl // "https://www.opengis.net/def/bblocks/") } } + .'
 
 # TODO: add dateTimeSupersession, dateTimeRetirement, dateTimeInvalidation, predecessor, successor
 context:
   '$':
     bblocks: https://www.opengis.net/def/bblocks/
-    '@base': https://www.opengis.net/def/bblocks/
     rdfs: http://www.w3.org/2000/01/rdf-schema#
     skos: http://www.w3.org/2004/02/skos/core#
     dct: http://purl.org/dc/terms/
     xsd: http://www.w3.org/2001/XMLSchema#
+    prof: http://www.w3.org/ns/dx/prof/
+    dcat: http://www.w3.org/ns/dcat#
+
     itemIdentifier: '@id'
+    baseURL: '@id'
     name: rdfs:label
     abstract: dct:abstract
+    description: dct:description
     # register:
     #  '@id': bblocks:inRegister
     #  '@type': '@id'
@@ -59,6 +66,9 @@ context:
     ldContext:
       '@id': bblocks:hasJsonLdContext
       '@type': '@id'
+    sourceLdContext:
+      '@id': bblocks:hasSourceJsonLdContext
+      '@type': '@id'
     documentation:
       '@id': dct:description
       '@type': '@id'
@@ -71,4 +81,19 @@ context:
       '@reverse': skos:inScheme
     dependsOn:
       '@id': bblocks:dependsOn
+      '@type': '@id'
+    profileOf:
+      '@id': prof:isProfileOf
+      '@type': '@id'
+    tags: dcat:keyword
+    shaclRules:
+      '@id': bblocks:hasShaclRule
+      '@type': '@id'
+      '@container': '@index'
+      '@index': rdfs:seeAlso
+    validationReport:
+      '@id': bblocks:hasValidationReport
+      '@type': '@id'
+    imports:
+      '@id': bblocks:imports
       '@type': '@id'
